--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
 
     <groupId>com.github.pedrobacchini</groupId>
     <artifactId>ecommerce</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>service-email</module>
+        <module>service-fraud-detector</module>
+        <module>service-log</module>
+        <module>service-new-order</module>
+        <module>common-kafka</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
