--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>common-kafka</module>
         <module>service-user</module>
         <module>service-http-ecommerce</module>
+        <module>service-reading-report</module>
     </modules>
 
     <properties>
