creating EmailNewOrderService to decouple email service from new order service

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>service-user</module>
         <module>service-http-ecommerce</module>
         <module>service-reading-report</module>
+        <module>service-email-new-order</module>
     </modules>
 
     <properties>
